<resources>
    <!--アプリの名前を変更する-->
    <string name="app_name">メモアプリ</string>
    <!--メニューアイテム -->
    <string name="action_settings">Settings</string>
    <!--mail.xml 追加メニュー-->
    <string name="action_add">追加</string>
    <!--メニューリスト-->
    <string name="action_menu1">メニュー１</string>
    <string name="action_menu2">メニュー2</string>
    <string name="action_menu3">メニュー3</string>
    <string name="action_menu4">メニュー4</string>
    <!--activity_edit.xml-->
    <string name="hint_title">タイトル</string>
    <string name="hint_content">内容</string>
    <!--edit.xml-->
    <string name="action_delete">削除</string>
    <!--編集題名-->
    <string name="editactivity_name">編集</string>
    <!--トスート内容-->
    <string name="msg_destuction">メモを破棄しました</string>
    <!--保存エラー-->
    <string name="save_error">ファイル保存エラー</string>
    <string name="btn_1">アクティビティ１をアクセスする</string>
    <string name="btn_2">アクティビティ２をアクセスする</string>
    <string name="btn_3">アクティビティ３をアクセスする</string>
    <string name="btn_4">アクティビティ４をアクセスする</string>
    <string name="btn_5">アクティビティ５をアクセスする</string>
    <string name="tab1">タグ１</string>
    <string name="tab2">タグ2</string>
    <string name="tab3">タグ3</string>
</resources>
