<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Memo">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
        <!--android:orderInCategory="100" app:showAsAction="never" />-->

    <!--追加メニュー-->

    <item android:id="@+id/action_menu1"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_menu1"
        tools:ignore="AppCompatResource"
        />
    <item android:id="@+id/action_menu2"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource"
        android:title="@string/action_menu2"/>

    <item android:id="@+id/action_menu3"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"
        android:title="@string/action_menu3"
        />

</menu>
